log

Thu 17 Aug 2023 08:14:30 PM UTC: 
 exercises.c | 60 ++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 52 insertions(+), 8 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:10: error: function returns address of local variable [-Werror=return-local-addr]
   52 |   return arrLocal;
      |          ^~~~~~~~
exercises.c: In function ‘checkSorted’:
exercises.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e9b1f3c
Thu 17 Aug 2023 08:15:41 PM UTC: 
 exercises.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:10: error: function returns address of local variable [-Werror=return-local-addr]
   52 |   return arrLocal;
      |          ^~~~~~~~
test.c: In function ‘test_mergeSort’:
test.c:204:3: error: implicit declaration of function ‘mergeSortedArrays’ [-Werror=implicit-function-declaration]
  204 |   mergeSortedArrays(arr1, size1, arr2, size2, result);
      |   ^~~~~~~~~~~~~~~~~
test.c: In function ‘test_checkSorted’:
test.c:258:18: error: implicit declaration of function ‘checkSorted’; did you mean ‘test_checkSorted’? [-Werror=implicit-function-declaration]
  258 |     int result = checkSorted(arr, size);
      |                  ^~~~~~~~~~~
      |                  test_checkSorted
test.c: In function ‘test_biblioteca’:
test.c:306:5: error: implicit declaration of function ‘inicializarLibro’ [-Werror=implicit-function-declaration]
  306 |     inicializarLibro(&libro, titulos[i], autores[i], aniosNacimiento[i],
      |     ^~~~~~~~~~~~~~~~
test.c: In function ‘test_crearListaEnlazada’:
test.c:331:19: error: implicit declaration of function ‘crearListaEnlazada’; did you mean ‘test_crearListaEnlazada’? [-Werror=implicit-function-declaration]
  331 |     Nodo* lista = crearListaEnlazada(arr, size);
      |                   ^~~~~~~~~~~~~~~~~~
      |                   test_crearListaEnlazada
test.c:331:19: error: initialization of ‘Nodo *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
60934c9
Thu 17 Aug 2023 08:16:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:19: error: expected expression before ‘]’ token
   52 |   return arrLocal[];
      |                   ^
exercises.c:44:7: error: variable ‘arrLocal’ set but not used [-Werror=unused-but-set-variable]
   44 |   int arrLocal[size];
      |       ^~~~~~~~
test.c: In function ‘test_mergeSort’:
test.c:204:3: error: implicit declaration of function ‘mergeSortedArrays’ [-Werror=implicit-function-declaration]
  204 |   mergeSortedArrays(arr1, size1, arr2, size2, result);
      |   ^~~~~~~~~~~~~~~~~
test.c: In function ‘test_checkSorted’:
test.c:258:18: error: implicit declaration of function ‘checkSorted’; did you mean ‘test_checkSorted’? [-Werror=implicit-function-declaration]
  258 |     int result = checkSorted(arr, size);
      |                  ^~~~~~~~~~~
      |                  test_checkSorted
test.c: In function ‘test_biblioteca’:
test.c:306:5: error: implicit declaration of function ‘inicializarLibro’ [-Werror=implicit-function-declaration]
  306 |     inicializarLibro(&libro, titulos[i], autores[i], aniosNacimiento[i],
      |     ^~~~~~~~~~~~~~~~
test.c: In function ‘test_crearListaEnlazada’:
test.c:331:19: error: implicit declaration of function ‘crearListaEnlazada’; did you mean ‘test_crearListaEnlazada’? [-Werror=implicit-function-declaration]
  331 |     Nodo* lista = crearListaEnlazada(arr, size);
      |                   ^~~~~~~~~~~~~~~~~~
      |                   test_crearListaEnlazada
test.c:331:19: error: initialization of ‘Nodo *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
222594c
